Fixes navigation alignment issue, ticket DT-702

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -255,7 +255,6 @@ header {
     min-height: 40px;
     z-index: 9999;
     .extendednavigation {
-        float: none;
         position: relative;
         width: 90%;
         margin: 0 5%;
@@ -274,9 +273,7 @@ header {
         }
         ul {
             display: table;
-            float: none;
             margin: 0 auto;
-            text-align: center;
             @media @tablet {
                 /* Hidden until nav icon is clicked */
                 display: none;
